[package]
name = "rengine"
version = "0.1.0"
authors = ["Adrien Dubouchet <ra.dubouchet@gmail.com>"]
build = "src/build.rs"

[dependencies]
chrono = "*"
#gfx = "*"

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"
default-features = false

#[dependencies.clap]
#git = "https://github.com/kbknapp/clap-rs"
